--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,13 @@ language: ruby
 rvm:
   - ruby-head
   - 2.2.6
+  - 2.3.3
+  - 2.4.0
 
 matrix:
   allow_failures:
     - rvm: ruby-head
+    - rvm: 2.4.0
 fast_finish: true
 
 branches:
