--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,8 @@ version: 2
 jobs:
   build:
     branches:
-      only:
-        - master
+      ignore:
+        - /.*/
     docker:
       - image: docker:stable
     working_directory: /root/cloudkeeper-one
@@ -12,23 +12,20 @@ jobs:
       - checkout
       - setup_remote_docker
       - run: |
-          TAG=${CIRCLE_BRANCH}
-          BRANCH=${CIRCLE_BRANCH}
-          VERSION=">= 0"
+          TAG=${CIRCLE_TAG#v}
+          BRANCH=${TAG/%.*/.x}
+          VERSION=${TAG}
+          LATEST=$(git tag --sort=-refname | head -n 1)
 
-          if [ "${TAG}" == "master" ]; then
-            TAG=latest
-          fi
-
-          if [ -n "${CIRCLE_TAG}" ]; then
-            TAG=${CIRCLE_TAG#v}
-            BRANCH=${TAG/%.*/.x}
-            VERSION=${TAG}
-          fi
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
 
           docker build --build-arg branch=$BRANCH --build-arg version="$VERSION" -t cloudkeeper/cloudkeeper-one:$TAG .
-          docker login -u $DOCKER_USER -p $DOCKER_PASS
           docker push cloudkeeper/cloudkeeper-one:$TAG
+
+          if [ "$LATEST" == "$CIRCLE_TAG" ]; then
+            docker tag cloudkeeper/cloudkeeper-one:$TAG cloudkeeper/cloudkeeper-one:latest
+            docker push cloudkeeper/cloudkeeper-one:latest
+          fi
 deployment:
   fake_deploy_for_cci2:
     tag: /v.*/
